# SQLiteDB

./: CMakeLists.txt  LICENSE  README.md  clangformat_fish.fish  clangformat_this.fish
incl/: SQLiteConnection.hpp  SQLiteDB.hpp
incl_private/: SQLiteConnection.hpp
src/: Row.cpp  SQLiteConnection.cpp  SQLiteDB.cpp  execute_statement_norows.cpp  execute_statement_returns.cpp
test/: SQLiteDB_test.cpp
